# duchess-ndm

./: Cargo.toml
book/src/: SUMMARY.md  build_rs.md  impl_java_interface.md
duchess-build-rs/: Cargo.toml
duchess-build-rs/src/: files.rs  impl_java_trait.rs  java_compiler.rs  java_package_macro.rs  lib.rs  re.rs  shim_writer.rs
duchess-reflect/src/: argument.rs  class_info.rs  codegen.rs  lib.rs  reflect.rs
macro/: Cargo.toml
macro-rules/src/: impl_java_interface.rs  lib.rs
macro/src/: class_info.rs  codegen.rs  derive.rs  hygiene.rs  impl_java_interface.rs  impl_java_interface.rsx  java_function.rs  lib.rs  reflect.rs  shim.rs  signature.rs
macro/src/class_info/: from_syn.rs  javap_parser.lalrpop
macro/src/impl_java_interface/: shim.rs
src/: array.rs  cast.rs  class_definition.rs  error.rs  global.rs  into_global.rs  into_rust.rs  jdk.rs  jvm.rs  lib.rs  link.rs  not_null.rs  ops.rs  raw.rs  shim_class.rs  str.rs  try_catch.rs
test-crates/duchess-java-tests/: Cargo.toml  build.rs
test-crates/duchess-java-tests/java/callback/: CallCallback.java  Callback.java  Dummy.java  GetName.java  GetNameFrom.java
test-crates/duchess-java-tests/tests/: ui.rs
test-crates/duchess-java-tests/tests/rust-to-java/: callback-get-name-invoke.rs
test-crates/duchess-java-tests/tests/rust-to-java/callback/: invoke.stdout
test-crates/duchess-java-tests/tests/ui/callback/: invoke.rs
