[package]
name = "duchess-java-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
duchess = { path = "../.." }
thiserror = "1.0.40"

[dev-dependencies]
ui_test = "0.23"

[build-dependencies]
anyhow = "1.0.86"
duchess-build-rs = { version = "0.3.0", path = "../../duchess-build-rs" }
walkdir = "2.3"

[[bin]]
name = "java_wrapper"
path = "src/java_wrapper.rs"

[[test]]
name = "ui"
harness = false
